# ESE5160-GGWP-Muscle_Master

./: .gitignore  A07G_README.md  ESE5160-GGWP-Muscle_Master.code-workspace  README.md
MM_button_led_tst/: .projectlinkstore  app.c  button_baremetal.c  button_baremetal.h  sl_si91x_button_text.pintool  sl_si91x_button_text.slcp  sl_si91x_button_text.slpb  sl_si91x_button_text.slps  vscode.conf
MM_button_led_tst/.uceditor/: .sl_si91x_button_text.%extension-wiseconnect3_sdk%i2c_instancei2c0.cedit  .sl_si91x_button_text.%extension-wiseconnect3_sdk%sl_si91x_button_917btn0.cedit  .sl_si91x_button_text.%extension-wiseconnect3_sdk%sl_si91x_led_917led0.cedit
MM_button_led_tst/autogen/: sl_component_catalog.h  sl_event_handler.c  sl_i2c_init.c  sl_i2c_instances.h  sl_si91x_button_instances.c  sl_si91x_button_instances.h  sl_si91x_led_instances.c  sl_si91x_led_instances.h
MM_button_led_tst/autogen/.slc_state/: .crc_config.crc
MM_button_led_tst/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
MM_button_led_tst/cmake_gcc/: CMakeLists.txt  CMakePresets.json  sl_si91x_button_text.cmake
MM_button_led_tst/config/: RTE_Device_917.h  pin_config.h  sl_gpio_board.h  sl_i2c_board.h  sl_pwm_board.h  sl_si91x_button_init_btn0_config.h  sl_si91x_button_pin_config.h  sl_si91x_i2c_init_i2c0_config.h  sl_si91x_led_config.h  sl_si91x_led_init_led0_config.h  sl_sysrtc_board.h
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/cmsis_driver/: GSPI.h  I2C.h  SAI.h  SPI.h  UDMA.h
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/peripheral_drivers/inc/: rsi_sysrtc_headers.h
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/rom_driver/inc/: rsi_rom_clks.h  rsi_rom_egpio.h  rsi_rom_table_RS1xxxx.h
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/systemlevel/inc/: rsi_ds_timer.h  rsi_pmu.h
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/systemlevel/src/: rsi_bod.c  rsi_time_period.c
MM_button_led_tst/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/unified_api/src/: sl_si91x_adc.c
sl_si91x_i2c_driver_leader/: .projectlinkstore  i2c_leader_example.c  readme.md  sl_si91x_i2c_driver_leader.pintool  sl_si91x_i2c_driver_leader.slcp  sl_si91x_i2c_driver_leader.slpb  sl_si91x_i2c_driver_leader.slps  vscode.conf
sl_si91x_i2c_driver_leader/.uceditor/: .sl_si91x_i2c_driver_leader.%extension-wiseconnect3_sdk%i2c_instancei2c0.cedit  .sl_si91x_i2c_driver_leader.%extension-wiseconnect3_sdk%i2c_instancei2c2.cedit
sl_si91x_i2c_driver_leader/autogen/: gen.properties  linkerfile_SoC.ld  sl_component_catalog.h  sl_event_handler.c  sl_i2c_init.c  sl_i2c_instances.h
sl_si91x_i2c_driver_leader/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
sl_si91x_i2c_driver_leader/cmake_gcc/: CMakeLists.txt  CMakePresets.json  sl_si91x_i2c_driver_leader.cmake  toolchain.cmake
sl_si91x_i2c_driver_leader/config/: pin_config.h  sl_board_configuration.h  sl_board_control.h  sl_qei_board.h  sl_rs485_board.h  sl_si91x_dma_config.h  sl_si91x_external_oscillator.h  sl_si91x_i2c_init_i2c0_config.h  sl_si91x_i2c_init_i2c2_config.h  sl_sio_board.h
sl_si91x_i2c_driver_leader/simplicity_sdk_2025.6.3/platform/service/sl_main/inc/: sl_main_process_action.h
sl_si91x_i2c_driver_leader/simplicity_sdk_2025.6.3/platform/service/sl_main/src/: sl_main_init.c  sl_main_process_action.c
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/core/common/inc/: sl_si91x_os.h
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/core/common/src/: sl_si91x_stack_object_declare.c
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/core/config/: rsi_nvic_priorities_config.h
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/core/config/src/: rsi_nvic_priorities_config.c
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/cmsis_driver/: USART.c  USART.h
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/rom_driver/inc/: rsi_rom_crc.h
sl_si91x_i2c_driver_leader/wiseconnect3_sdk_3.5.2/components/device/silabs/si91x/mcu/drivers/systemlevel/inc/: rsi_bod.h  rsi_pll.h  rsi_processor_sensor.h  rsi_rtc.h  rsi_temp_sensor.h  rsi_ulpss_clk.h
(+13 files in other folders)
